# bioCRNpyler

./: .coverage  .coveragerc  .gitignore  .travis.yml  BioCRNpyler Developer Overview Notebook.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  bioscrape_test.sbml  component.py  conf.py  coverage.xml  d_cas9.py  dna_assembly.py  global_mechanism.py.orig  index.html  index.rst  mechanism.py  mixture.py  pyproject.toml  pytest.ini  requirements.txt  requirements.txt.old  sbml_test_file.sbml  sbmlutil.py  setup.cfg  setup.py  txtl.py
.github/: codecov.yml
.ipynb_checkpoints/: BioCRNpyler Developer Overview Notebook-checkpoint.ipynb  Parameters-checkpoint.ipynb
Old Tests/: bioscrape_test.sbml  bioscrape_test.xml  constitutive_expression_test.xml  dcas9_repression_test.sbml  dcas9_repression_test.xml  dna_assembly_and_constituitive_expression.py  parameter_loading_test.py  repr_for_crn_and_component_and_write_to_sbml.py  retroactivity_with_custom_mechanism_and_custom_promoter.py
Presentations and Documentation/: DNA Supergroup Presentation 1-28-19.pptx  Murray Lab Update 10-8-18.pptx  SuperGroup Meeting Examples.ipynb
Tests/: RegulationTest.py  RegulationWithCrosstalk.py  RetroactivityTest.py  SimpleExpressionTest.py  TestingReadMe.txt  bioscrape_test.sbml  bioscrape_test.xml  dcas9_repression_test.sbml  dcas9_repression_test.xml  deCas9_repression.py  dilution_with_global_mechanisms.py  dna_assembly_and_constituitive_expression.py  regulated_promoter_activation_and_repression.py  repr_for_crn_and_component_and_write_to_sbml.py  retroactivity_with_custom_mechanism_and_custom_promoter.py  sbml_test_file.xml  simulate_compiled_crn_with_bioscrape_via_sbml.py  test_CombinatorialPromoter.py  (+38 more)
(+276 files in other folders)
